--- a/style.css
+++ b/style.css
@@ -829,6 +829,38 @@ input[type = "checkbox"] {
     
 }
 
+.error-message {
+    margin-top: 10px;
+    padding: 10px 10px;
+    background-color: salmon;
+    color: white;
+}
+
+.error-login {
+    margin-top: 10px;
+    padding: 10px 10px;
+    background-color: salmon;
+    color: white;
+}
+
+.success-message {
+    margin-top: 10px;
+    padding: 10px 10px;
+    background-color: rgb(138, 230, 138);
+    color: white;
+}
+
+.success-login {
+    margin-top: 10px;
+    padding: 10px 10px;
+    background-color: rgb(138, 230, 138);
+    color: white;
+}
+
+
+
+
+
 
 
 
