--- a/style.css
+++ b/style.css
@@ -857,6 +857,30 @@ input[type = "checkbox"] {
     color: white;
 }
 
+.suggestions-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+}
+
+.suggestion {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.suggestion:hover {
+    background-color: #f4f4f4;
+}
+
+.suggestions-container {
+    display: none;
+}
 
 
 
